--- a/builder-mode/建造者模式.md
+++ b/builder-mode/建造者模式.md
@@ -24,4 +24,480 @@
    
    代码实现
    
+   - 常规做法
+   
+     - Product 普通类
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     public class Computer {
+     
+         private String board;
+     
+         private String cpu;
+     
+         private String ram;
+     
+         private String disk;
+     
+         private String graphicsCard;
+     
+         @Override
+         public String toString() {
+             return "计算机配置：{" +
+                     "board='" + this.getBoard() + '\'' +
+                     ", cpu='" + this.getCpu() + '\'' +
+                     ", ram='" + this.getRam() + '\'' +
+                     ", disk='" + this.getDisk() + '\'' +
+                     ", graphicsCard='" + this.getGraphicsCard() + '\'' +
+                     '}';
+         }
+     
+         public Computer() {
+         }
+     
+         public Computer(String board, String cpu, String ram, String disk, String graphicsCard) {
+             this.board = board;
+             this.cpu = cpu;
+             this.ram = ram;
+             this.disk = disk;
+             this.graphicsCard = graphicsCard;
+         }
+     
+         public String getBoard() {
+             return board;
+         }
+     
+         public void setBoard(String board) {
+             this.board = board;
+         }
+     
+         public String getCpu() {
+             return cpu;
+         }
+     
+         public void setCpu(String cpu) {
+             this.cpu = cpu;
+         }
+     
+         public String getRam() {
+             return ram;
+         }
+     
+         public void setRam(String ram) {
+             this.ram = ram;
+         }
+     
+         public String getDisk() {
+             return disk;
+         }
+     
+         public void setDisk(String disk) {
+             this.disk = disk;
+         }
+     
+         public String getGraphicsCard() {
+             return graphicsCard;
+         }
+     
+         public void setGraphicsCard(String graphicsCard) {
+             this.graphicsCard = graphicsCard;
+         }
+     }
+
+     ```
+     
+     - Builder 抽象建造者
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     public interface Builder {
+     
+         /**
+          * 安装主板
+          */
+         void installBoard(String board);
+     
+         /**
+          * 安装CPU
+          */
+         void installCpu(String cpu);
+     
+         /**
+          * 安装内存
+          */
+         void installRam(String ram);
+     
+         /**
+          * 安装硬盘
+          */
+         void installDisk(String disk);
+     
+         /**
+          * 安装显卡
+          */
+         void installGraphicsCard(String card);
+     
+         Computer create();
+     
+     }
+
+     ```
+     
+     - ConcreateBuilder 具体的建造者，可以有多个
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     public class GameBuilder implements Builder {
+     
+         private Computer computer = new Computer();
+     
+         @Override
+         public void installBoard(String board) {
+             computer.setBoard(board);
+         }
+     
+         @Override
+         public void installCpu(String cpu) {
+             computer.setCpu(cpu);
+         }
+     
+         @Override
+         public void installRam(String ram) {
+             computer.setRam(ram);
+         }
+     
+         @Override
+         public void installDisk(String disk) {
+             computer.setDisk(disk);
+         }
+     
+         @Override
+         public void installGraphicsCard(String graphiceCard) {
+             computer.setGraphicsCard(graphiceCard);
+         }
+     
+         @Override
+         public Computer create() {
+             return this.computer;
+         }
+     }
+
+     ```
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     public class OfficeBuilder implements Builder {
+     
+         private Computer computer = new Computer();
+     
+         @Override
+         public void installBoard(String board) {
+             computer.setBoard(board);
+         }
+     
+         @Override
+         public void installCpu(String cpu) {
+             computer.setCpu(cpu);
+         }
+     
+         @Override
+         public void installRam(String ram) {
+             computer.setRam(ram);
+         }
+     
+         @Override
+         public void installDisk(String disk) {
+             computer.setDisk(disk);
+         }
+     
+         @Override
+         public void installGraphicsCard(String graphiceCard) {
+             computer.setGraphicsCard(graphiceCard);
+         }
+     
+         @Override
+         public Computer create() {
+             return this.computer;
+         }
+     }
+
+     ```
+     
+     - Director 指挥者，指挥具体建造者去建造具体对象
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     public class Director {
+     
+         private Builder builder;
+     
+         public Director(Builder builder) {
+             this.builder = builder;
+         }
+     
+         public Computer create(String board, String cpu, String ram, String disk, String graphicsCard) {
+             this.builder.installBoard(board);
+             this.builder.installCpu(cpu);
+             this.builder.installRam(ram);
+             this.builder.installDisk(disk);
+             this.builder.installGraphicsCard(graphicsCard);
+             return this.builder.create();
+         }
+     }
+
+     ```
+     
+     - Client 客户端
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     public class Client {
+     
+         public static void main(String[] args) {
+             /**
+              * 客户要求组装一台办公配置的计算机
+              *
+              */
+             OfficeBuilder officeBuilder = new OfficeBuilder();
+             Director director = new Director(officeBuilder);
+             Computer computer = director.create("技嘉主板", "锐龙CPU", "七彩虹内存条", "希捷硬盘", "集成显卡");
+             System.out.println(computer.toString());
+     
+             /**
+              * 客户要求组装一台游戏配置的计算机
+              *
+              */
+             GameBuilder gameBuilder = new GameBuilder();
+             Director director1 = new Director(gameBuilder);
+             Computer computer1 = director1.create("技嘉主板", "因特尔CPU", "三星内存条", "希捷硬盘", "1050ti显卡");
+             System.out.println(computer1.toString());
+     }
+
+     ```
+     
+     - 运行结果
+          
+     ```text
+     计算机配置：{board='技嘉主板', cpu='锐龙CPU', ram='七彩虹内存条', disk='希捷硬盘', graphicsCard='集成显卡'}
+     计算机配置：{board='技嘉主板', cpu='因特尔CPU', ram='三星内存条', disk='希捷硬盘', graphicsCard='1050ti显卡'}
+     ```
+   
+   - 代替构造函数的建造者模式
+   
+     - 角色集于一身
+     
+     ```java
+     package com.ryan.buildermode;
+     
+     /**
+      * 替代多参构造的建造者模式
+      */
+     public class ComputerB {
+     
+         private String board;
+     
+         private String cpu;
+     
+         private String ram;
+     
+         private String disk;
+     
+         private String graphicsCard;
+     
+         // 其它一些可选配置
+         private String mouse ; // 鼠标
+         private String computerCase ; //机箱
+         private String mousePad ;   //鼠标垫
+         private String other ;  //其它配件
+     
+     
+         public ComputerB() {
+         }
+     
+         @Override
+         public String toString() {
+             return "ComputerB{" +
+                     "board='" + board + '\'' +
+                     ", cpu='" + cpu + '\'' +
+                     ", ram='" + ram + '\'' +
+                     ", disk='" + disk + '\'' +
+                     ", graphicsCard='" + graphicsCard + '\'' +
+                     ", mouse='" + mouse + '\'' +
+                     ", computerCase='" + computerCase + '\'' +
+                     ", mousePad='" + mousePad + '\'' +
+                     ", other='" + other + '\'' +
+                     '}';
+         }
+     
+         public ComputerB (ComputerBuilder computerBuilder) {
+             this.board = computerBuilder.getBoard();
+             this.cpu = computerBuilder.getCpu();
+             this.ram = computerBuilder.getRam();
+             this.disk = computerBuilder.getDisk();
+             this.graphicsCard = computerBuilder.getGraphicsCard();
+             this.mouse = computerBuilder.mouse ;
+             this.computerCase = computerBuilder.computerCase ;
+             this.mousePad = computerBuilder.mousePad ;
+             this.other = computerBuilder.other ;
+     
+         }
+     
+         public static class ComputerBuilder {
+             // 一个电脑的必须配置
+             private String board ;     // 主板
+             private String cpu ;           // cpu
+             private String ram;
+             private String disk;
+             private String graphicsCard;
+     
+             // 其它一些可选配置
+             private String mouse ; // 鼠标
+             private String computerCase ; //机箱
+             private String mousePad ;   //鼠标垫
+             private String other ;  //其它配件
+     
+             public ComputerB build() {
+                 return new ComputerB(this);
+             }
+     
+             public ComputerBuilder(String board, String cpu, String ram, String disk, String graphicsCard) {
+                 this.board = board;
+                 this.cpu = cpu;
+                 this.ram = ram;
+                 this.disk = disk;
+                 this.graphicsCard = graphicsCard;
+             }
+     
+             public String getBoard() {
+                 return board;
+     
+             }
+     
+             public ComputerBuilder setBoard(String board) {
+                 this.board = board;
+                 return this;
+             }
+     
+             public String getCpu() {
+                 return cpu;
+             }
+     
+             public ComputerBuilder setCpu(String cpu) {
+                 this.cpu = cpu;
+                 return this;
+             }
+     
+             public String getRam() {
+                 return ram;
+             }
+     
+             public ComputerBuilder setRam(String ram) {
+                 this.ram = ram;
+                 return this;
+             }
+     
+             public String getDisk() {
+                 return disk;
+             }
+     
+             public ComputerBuilder setDisk(String disk) {
+                 this.disk = disk;
+                 return this;
+             }
+     
+             public String getGraphicsCard() {
+                 return graphicsCard;
+             }
+     
+             public ComputerBuilder setGraphicsCard(String graphicsCard) {
+                 this.graphicsCard = graphicsCard;
+                 return this;
+             }
+     
+             public String getMouse() {
+                 return mouse;
+             }
+     
+             public ComputerBuilder setMouse(String mouse) {
+                 this.mouse = mouse;
+                 return this;
+             }
+     
+             public String getComputerCase() {
+                 return computerCase;
+             }
+     
+             public ComputerBuilder setComputerCase(String computerCase) {
+                 this.computerCase = computerCase;
+                 return this;
+             }
+     
+             public String getMousePad() {
+                 return mousePad;
+             }
+     
+             public ComputerBuilder setMousePad(String mousePad) {
+                 this.mousePad = mousePad;
+                 return this;
+             }
+     
+             public String getOther() {
+                 return other;
+             }
+     
+             public ComputerBuilder setOther(String other) {
+                 this.other = other;
+                 return this;
+             }
+         }
+     }
+
+     ```
+     
+     - 测试代码
+     
+     ```java
+     /**
+      * 没有抽象建造者和指挥者的建造者模式
+      */
+     ComputerB computerB = new ComputerB.ComputerBuilder("主板", "cpu", "hd", "希捷", "显卡")
+               .setMouse("鼠标").setMousePad("垫子").build();
+     
+     System.out.println(computerB.toString());
+     ```
+     
+     - 运行结果
+     
+     ```text
+     ComputerB{board='主板', cpu='cpu', ram='hd', disk='希捷', graphicsCard='显卡', mouse='鼠标', computerCase='null', mousePad='垫子', other='null'}
+     ```
+   
+   
+   总结
+   
+   - 优点
+    
+     - 实例化步骤和具体对象分离，相同的实例化步骤创建不同的对象
+    
+     - 每个具体的建造者两两之间不影响彼此，对于新的建造者，添加一个实现就可以了
+    
+   - 缺点
+
+     - 只适用于对象具有相同的特点「过程和步骤」，如果对象之间差异非常大，则不适用「使用范围受限」
+      
+     - 万一那天对象内部发生改变，那多个建造者都要修改，成本太大
+    
+   - 场景应用
+
+     - 如果一个对象有非常复杂的内部结构「这些产品通常有很多属性」，那么使用建造者模式
+    
+     - 如果想把复杂对象的创建和使用分离开来，那么使用建造者模式「使用相同的创建步骤可以创建不同的产品」
+   
    
